--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        
             <button class="btn">Contact Us</button>
             
-            <button class="btns">Contact Us</button>
+            <button class="btns">Done project<br>4580+</button>
         <div id="black1"><img src="/images/black3-removebg-preview (2).png"></div>
         <div class="members">
             <div id="mem1">
